[package]
name = "bgpstream-sys"
version = "0.3.0"
authors = ["Benjamin VanderSloot <admin@benvds.com>"]
build = "build.rs"
description = "libbgpstream *-sys package. Unsafe, generated with bindgen."
license = "CC-BY-NC-4.0"
homepage = "https://github.com/bvandersloot/bgpstream-sys"
repository = "https://github.com/bvandersloot/bgpstream-sys"

[dependencies]

[build-dependencies]
bindgen = "*"
